--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "gulp-webp": "^4.0.1",
     "gulp-webp-html": "^1.0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.6.0"
+  }
 }
